--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+#Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/Fullstack
+spring.datasource.username=developer
+spring.datasource.password=12345678
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Port
+server.port = 8084
+
+#Autowired
+spring.jpa.open-in-view=true
